# monoloco

./: .gitattributes  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
configs/: intrinsics.yaml
docs/: MonStereo.md  MonoLoco++.md  MonoLoco.md  MonoLoco_pp.md  SocialDistancing.md
kitti-eval/: CMakeLists.txt  README.md  evaluate_object.cpp  original.cpp  parser.py
monoloco/: __init__.py  _version.py  activity.py  predict.py  predict_jrdb.py  run.py  test.py
monoloco/eval/: __init__.py  eval_activity.py  eval_kitti.py  eval_variance.py  generate_kitti.py  geom_baseline.py  reid_baseline.py  stereo_baselines.py
monoloco/features/: preprocess_ki.py  preprocess_nu.py  resize_images.py
monoloco/network/: __init__.py  architectures.py  geom_baseline.py  intrinsics.yaml  losses.py  net.py  pifpaf.py  process.py
monoloco/predict/: __init__.py  factory.py  monoloco.py  network.py  pifpaf.py  predict.py
monoloco/prep/: __init__.py  prep_kitti.py  preprocess_generic.py  preprocess_ki.py  preprocess_kitti.py  preprocess_nu.py  preprocess_nu_stereo.py  transforms.py
monoloco/train/: __init__.py  architectures.py  datasets.py  hyp_tuning.py  losses.py  trainer.py  trainer_triangle.py
monoloco/utils/: __init__.py  camera.py  iou.py  kitti.py  misc.py  network.py  nuscenes.py  old_stereo.py  pifpaf.py  stereo.py
monoloco/visuals/: __init__.py  figures.py  orientation.py  paper.py  pifpaf_show.py  plot_3d_box.py  printer.py  results.py  webcam.py
monstereo/: __init__.py  activity.py  predict.py  run.py
monstereo/eval/: eval_activity.py  eval_kitti.py  eval_variance.py  generate_kitti.py
monstereo/network/: __init__.py  architectures.py  net.py  pifpaf.py  process.py
monstereo/prep/: prep_kitti.py  preprocess_nu.py
monstereo/train/: hyp_tuning.py  losses.py  trainer.py
monstereo/utils/: iou.py  kitti.py  misc.py  stereo.py
monstereo/visuals/: figures.py  pifpaf_show.py  printer.py
src/: eval_kitti.py  main.py  trainer.py
src/eval/: generate_kitti.py  generate_stereo.py  geom_baseline.py  kitti_eval.py  run_kitti.py
src/features/: preprocess_ki.py  preprocess_nu.py  resize_images.py  transforms.py
src/models/: architectures.py  datasets.py  hyp_tuning.py  losses.py  trainer.py
src/predict/: detector.py  factory.py  monoloco.py  pifpaf.py  predict.py  predict_2d_3d.py  predict_monoloco.py
src/utils/: camera.py  kitti.py  logs.py  misc.py  monoloco.py  normalize.py  nuscenes.py  pifpaf.py  stereo.py
src/visuals/: paper.py  (+3 more)
tests/: sample_joints-kitti-mono.json  sample_joints-kitti-stereo.json  test_iou.ipynb  test_package.py  test_train.py  test_train_mono.py  test_train_stereo.py  test_utils.py  test_visuals.py
