[build-system]
build-backend = "setuptools.build_meta"
requires = ["numpy", "setuptools", "wheel"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nbval-lax --current-env --doctest-modules"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.pylint.BASIC]
variable-rgx = "[a-z0-9_]{1,30}$"
good-names = ["ap", "kk", "kp", "b", "d","dd", "xx", "yy", "xzz", "ax", "f", "g", "gt", "h", "i", "im", "lr", "n", "p", "q", "plt", "r", "s", "t", "t1", "t2", "th", "v", "vs", "w", "wh", "x", "x1", "x2", "xs", "y", "ys", "xy"]
class-const-naming-style = "snake_case"  # checked since pylint 2.7.3

[tool.pylint.IMPORTS]
allow-any-import-level = ["pycocotools", "pycocotools.coco"]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 20  # Minimum lines number of a similarity.
ignore-comments = "yes"  # Ignore comments when computing similarities.
ignore-docstrings = "yes"  # Ignore docstrings when computing similarities.
ignore-imports = "yes"  # Ignore imports when computing similarities.

[tool.pylint.TYPECHECK]
generated-members = ["numpy.*", "torch.*", "cv2.*", "openpifpaf.functional.*"]
ignored-modules = ["openpifpaf.functional"]
disable = [
    "missing-docstring",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-few-public-methods",
    "unsubscriptable-object",
    "not-callable",  # for torch tensors
    ]
[tool.pylint.FORMAT]
max-line-length = 120

